# sf-research-momentum

./: .gitignore  README.md  backtest_weights.sh  config.yml  get_alphas.py  get_signal_weights.py  mve_backtest_cfg.yml  pipelines.sh  pyproject.toml
backtester/: __main__.py
configs/: idiosyncratic-momentum-quantile-equal-monthly.yml  momentum-quantile-equal-monthly.yml
configs/idio-mom-ff3/: idio-mom-ff3-in-sample-equal.yml  idio-mom-ff3-out-of-sample-equal.yml  idio-mom-ff3-select-sample-equal.yml
configs/idio-mom-vol-scaled-ff3/: idio-mom-vol-scaled-ff3-out-of-sample-equal.yml  idio-mom-vol-scaled-ff3-select-sample-equal.yml
configs/mom/: mom-in-sample-equal.yml  mom-out-of-sample-equal.yml  mom-select-sample-equal.yml
papers/: notes.md
research/: __main__.py  alpha_constructors.py  backtest.py  config.py  constraints.py  data.py  evaluations.py  filters.py  models.py  portfolios.py  returns.py  signals.py
research/data/: __main__.py  alphas.py  barra_ff3_betas.py  crsp_ff3_betas.py  dmom_coefficients.py  fama_french_3_factors.py  fama_french_5_factors.py  momentum_factor_returns.py
research/experiments/: __main__.py  experiment_1.py  experiment_10.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_6.py  experiment_7.py  experiment_8.py  experiment_9.py
research/pipelines/: __main__.py  alphas.py  barra.py  crsp.py  (+9 more)
scripts/: get_data.sh  get_weights.sh  get_weights_by_signal.sh
src/: backtest.py  config.py  data.py  dataset.py  evaluations.py  filters.py  idio_mom.py  models.py  portfolios.py  returns.py  signals.py
(+43 files in other folders)
