[project]
name = "sf-research-momentum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "great-tables[extra]>=0.20.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "polars-ols>=0.3.5",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "sf-quant>=0.1.15",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
]
